metadata configuration implemented